--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -73,10 +73,10 @@
             </objects>
             <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Meal Table View Controller-->
         <scene sceneID="n5s-CR-Gd1">
             <objects>
-                <tableViewController id="m0Y-gP-iKy" sceneMemberID="viewController">
+                <tableViewController id="m0Y-gP-iKy" customClass="MealTableViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="O7P-1t-Rer">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -106,6 +106,11 @@
                                         </stackView>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="ibw-Mb-2kM" id="rD5-XR-hQI"/>
+                                    <outlet property="photoImageView" destination="y5a-Qe-TKA" id="c3t-kc-EMZ"/>
+                                    <outlet property="ratingControl" destination="l7h-QH-i35" id="1BX-uL-aNC"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
